workloads/domains/ext-authz/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-authz
  namespace: auth
  labels:
    app: ext-authz
spec:
  type: ClusterIP
  selector:
    app: ext-authz
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
